crates/flir-cli/tests/integration/snapshots/integration__toml__empty_ignore_array-2.snap
---
source: crates/flir-cli/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Unknown rules in field `ignore` in 'flir.toml': "" (empty or whitespace-only not allowed)

----- args -----
.
